Bug Fix 1. Balls translucent 2. Text in feedback page appears cut off

--- a/public/css/nutrition-summary-styles.css
+++ b/public/css/nutrition-summary-styles.css
@@ -19,12 +19,12 @@
 
 
 .uk-range::-webkit-slider-thumb {
-    width: 34px;
-    height: 34px;
+    width: 35px;
+    height: 35px;
     box-shadow: inset 0 4px 4px rgba(255, 255, 255, 0.38);
     background: #000;
     border: none;
-    margin-top: -11px;
+    margin: -12px 0;
 }
 
 
@@ -59,6 +59,6 @@
     font-weight: 500;
 }
 
-.height{
+.height {
     height: 35px;
 }
